--- a/index.html
+++ b/index.html
@@ -6,52 +6,39 @@
     <title>Nebure的个人网站</title>
     <style>
         body {
-            font-family: 'Poppins', sans-serif; /* 借鉴参考圆润字体 */
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ffffff; /* 白背景 */
-            color: #2C3E50; /* 深蓝文字 */
+            background-color: #ffffff;
+            color: #2C3E50;
         }
         header {
             background-color: #ffffff;
             padding: 20px 40px;
             display: flex;
             align-items: center;
-            justify-content: space-between;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05); /* 轻阴影 */
+            justify-content: flex-start; /* 借鉴参考左侧对齐排版 */
+            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
         }
         .logo {
             font-size: 1.8em;
             font-weight: bold;
-            background: linear-gradient(to right, #4A90E2, #9B59B6); /* 蓝紫渐变 */
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            text-shadow: 0 0 5px #FFC0CB; /* 粉色外辉 */
+            color: #000000; /* 黑色字体，不发光 */
+            margin-right: 60px; /* logo和菜单间距，借鉴参考宽间距 */
         }
         nav {
             display: flex;
-            gap: 20px;
+            gap: 30px; /* 菜单项间距，借鉴参考均匀间距 */
         }
         nav a {
-            color: #2C3E50; /* 深蓝 */
+            color: #2C3E50;
             text-decoration: none;
-            font-size: 1em;
+            font-size: 1em; /* 文字大小借鉴参考中等大小 */
+            font-weight: 400; /* 字体风格正常粗细 */
             transition: color 0.3s;
         }
         nav a:hover {
-            color: #34495E; /* hover稍深 */
-        }
-        .contact-btn {
-            background-color: #34495E; /* 深蓝按钮 */
-            color: white;
-            padding: 8px 20px;
-            border-radius: 20px; /* 圆角 */
-            text-decoration: none;
-            font-size: 1em;
-            transition: background-color 0.3s;
-        }
-        .contact-btn:hover {
-            background-color: #2C3E50;
+            color: #34495E;
         }
         section {
             max-width: 1000px;
@@ -61,7 +48,7 @@
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.05);
         }
-        /* 其他样式保持，省略以简 */
+        /* 其他样式保持一致，省略以简；完整时添加你的板块样式 */
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -75,13 +62,12 @@
             <a href="#nebure">Nebure</a>
             <a href="#chordisle">Chordisle</a>
         </nav>
-        <a href="#contact" class="contact-btn">Contact Us ↑</a>
     </header>
     
     <section id="focus">
         <h2>Focus：个人主页 - 即时动态记录</h2>
         <p>这里记录我个人的即时动态，作为灵活平台的核心。</p>
-        <!-- 其他内容 -->
+        <!-- 你的Focus内容 -->
     </section>
     
     <!-- 其他板块 -->
@@ -91,7 +77,7 @@
     </footer>
 
     <script>
-        // JS保持
+        // 你的JS代码
     </script>
 </body>
 </html>
