--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
             padding: 20px 40px;
             display: flex;
             align-items: center;
-            justify-content: flex-start; /* 借鉴参考左侧对齐排版 */
+            justify-content: flex-start;
             box-shadow: 0 2px 4px rgba(0,0,0,0.05);
         }
         .logo {
             font-size: 1.8em;
             font-weight: bold;
-            color: #000000; /* 黑色字体，不发光 */
-            margin-right: 60px; /* logo和菜单间距，借鉴参考宽间距 */
+            color: #000000; /* 黑色字体 */
+            margin-right: 60px; /* 间距一致 */
         }
         nav {
             display: flex;
-            gap: 30px; /* 菜单项间距，借鉴参考均匀间距 */
+            gap: 30px; /* 菜单间距 */
         }
         nav a {
             color: #2C3E50;
             text-decoration: none;
-            font-size: 1em; /* 文字大小借鉴参考中等大小 */
-            font-weight: 400; /* 字体风格正常粗细 */
+            font-size: 1em;
+            font-weight: 400; /* 字体风格正常 */
             transition: color 0.3s;
         }
         nav a:hover {
@@ -48,7 +48,7 @@
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.05);
         }
-        /* 其他样式保持一致，省略以简；完整时添加你的板块样式 */
+        /* 其他样式保持 */
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
